# xkeyboard-config

./: .gitlab-ci.yml  NEWS  configure.ac  meson.build
.gitlab-ci/: generate-evdev-keycodes.py  yaml-to-junit-xml.py
compat/: Makefile.am
geometry/: Makefile.am  pc
keycodes/: Makefile.am  evdev
po/: bg.po  ca.po  cs.po  de.po  eo.po  fi.po  fr.po  ko.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sv.po  tr.po  uk.po
rules/: 0001-lists.part  0042-o_s.part  Makefile.am  base.extras.xml  base.lists.part  base.xml  merge.py
rules/compat/: Makefile.am  map-variants.py
symbols/: Makefile.am  al  am  apl  ara  at  ba  be  bg  by  ca  ch  cm  cn  de  dk  dz  ee  eg  epo  es  eu  fi  fr  gb  hr  hu  il  in  inet  inet.in  is  it  jv  la  latam  latin  level2  lt  lv  (+18 more)
symbols/macintosh_vndr/: de
symbols/sun_vndr/: de  ee  lt  nl  tr  us
tests/: genLists4Comparizon.sh
types/: Makefile.am
